# pwn-english-dictionary-2007

./: README.md  meson.build
src/: meson.build  pwn-english-dictionary-2007-plugin.c  pwn-english-dictionary-2007-prefs.c  pwn-english-dictionary-2007-prefs.h  pwn-english-dictionary-2007-private.h  pwn-english-dictionary-2007-window.c  pwn-english-dictionary-2007-window.h  pwn-english-dictionary-2007.c  pwn-english-dictionary-2007.gresource.xml  pwn-english-dictionary-2007.h  pwn-english-dictionary-2007.plugin
src/gtk/: menus.ui
